# Task

./: CMakeLists.txt  example  main.cpp
Matrix/: CMakeLists.txt  Column.cpp  Column.h  Matrix.cpp  Matrix.h  Pair.cpp  Pair.h  Row.cpp  Row.h
Matrix1.1.1/: Column.cpp  Column.h  Complex.cpp  Complex.h  QuadMatrix.cpp  QuadMatrix.h
